java_library(
    name = "reactive-grpc-common",
    srcs = glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_guava_guava",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//stub",
        "@org_reactivestreams_reactive_streams",
    ],
)
