java_library(
    name = "reactive-grpc-gencommon",
    srcs = glob(["src/main/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@com_salesforce_servicelibs_jprotoc",
        "@com_github_spullara_mustache_java_compiler",
        "@io_grpc_grpc_java//protobuf",
        "@com_google_guava_guava",
        "@com_google_protobuf//:protobuf_java",
    ],
)
